--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="container">
     <ul class="cities"></ul>
   </div>
+
 </section>
 <li class="city">
   <h2 class="city-name" data-name="...">
@@ -25,4 +26,5 @@
   </figure>
 </li>
 
-<link rel='stylesheet' href='./style.css' />
+
+<link rel='stylesheet' href='./css/style.css' />
